<resources>
    <string name="app_name">Login</string>
    <string name="login">Login</string>
    <string name="acesse_sua_conta_no_aplicativo">Acesse sua conta no aplicativo</string>
    <string name="n_o_membro">Não é membro?</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="todo">TODO</string>
    <string name="perfil">Perfil</string>
    <string name="home">Home</string>
    <string name="treinos">Treinos</string>
    <string name="consultas">Consultas</string>
</resources>