<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName3"
        style="@style/Edit_Text"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPersonName"
        android:paddingStart="20sp"
        android:shadowColor="#00FFFFFF"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="RtlSymmetry,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="71dp"
        android:layout_height="35dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="31dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="138dp"
        android:layout_height="41dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="235dp"
        android:text="@string/acesse_sua_conta_no_aplicativo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        style="@style/Edit_Text"
        android:layout_width="370dp"
        android:layout_height="57dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="6dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName"
        android:paddingStart="20sp"
        android:paddingEnd="20sp"
        android:shadowColor="#00FFFFFF"
        android:textAlignment="gravity"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/n_o_membro"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/cadastre_se"
        android:textColor="#FF0000"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="151dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/recuperar_senha"
        android:textAlignment="center"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button4"
        android:layout_width="370dp"
        android:layout_height="63dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="21dp"
        android:text="@string/entrar"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>